--- a/css/style.css
+++ b/css/style.css
@@ -40,9 +40,13 @@ body .light-btn {
 }
 
 
+.navbar {
+  background-color: #ffffff;
+  box-shadow: 0px 4px 14px #0000001a;
+}
 .dark-btn img,
 .light-btn img {
-  width: 30px;
+  width: 37px;
 }
 .dark-btn, .light-btn {
   background: none;
